# rtops

./: .dockerignore  .gitignore  .local.env  .pre-commit-config.yaml  .pre-push-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.ci.yml  docker-compose.yml  main.py  openapi.json  pr_body.md  pyproject.toml
.github/: copilot-instructions.md  pr-template.md
.github/workflows/: build-and-push.yml  ci.yml  deploy-k8s.yml  deploy.yml  e2e-k8s.yml  e2e.yml  perf-k8s.yml  perf.yml
alembic/: env.py
alembic/versions/: 5d0c5f8af8d3_add_outbox_events.py  bd07bf65184f_initial_schema.py
app/: config.py  exceptions.py  main.py  request_context.py
app/events/: base_consumer.py  dispatcher.py  handlers.py  order_created_consumer.py  order_delivered_consumer.py  order_paid_consumer.py  order_ready_consumer.py  order_shipped_consumer.py  outbox.py  publisher.py
app/models/: database.py  line_item_model.py  line_item_schemas.py  order_model.py  order_schemas.py  outbox_event_model.py  product_model.py  product_schemas.py
app/routers/: orders.py  products.py
app/services/: pricing.py
app/utils/: seed_data.json  seed_data.py
bruno/: Health.yml  Read Root.yml  opencollection.yml
bruno/Orders/: Create a new order with multiple items.yml  Get order details by ID.yml  Mark order as delivered.yml  Mark order as ready to ship.yml  Mark order as shipped.yml  Simulate payment and mark order as paid.yml  folder.yml
docs/: project_overview.md
e2e/latest/: index.html
scripts/: publish_reports.py  run_functional_tests.sh  run_perf_tests.sh
tests/: conftest.py  test_event_handlers.py  test_order_integration.py
(+1068 files in other folders)
