[project]
name = "rtops"
version = "0.1.0"
description = "Event-driven FastAPI platform for Kubernetes-native experimentation"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # API
    "fastapi~=0.115",
    "uvicorn[standard]~=0.34",
    "httpx~=0.28",
    # Data
    "sqlalchemy~=2.0",
    "alembic~=1.15",
    "psycopg2-binary~=2.9",
    # Cache
    "redis[hiredis]~=5.2",
    # Messaging
    "celery~=5.4",
    "pika~=1.3",
    # Config / validation
    "pydantic~=2.10",
    "pydantic-settings>=2.7",
    # Logging / resilience
    "structlog>=24.4",
    "tenacity>=9.0",
    # Observability
    "prometheus-client>=0.21",
    "opentelemetry-api>=1.31",
    "opentelemetry-sdk>=1.31",
    "opentelemetry-instrumentation-fastapi>=0.52b0",
    "opentelemetry-exporter-otlp>=1.31",
    # Kubernetes
    "kubernetes>=32.0",
    "pyyaml>=6.0",
    # Utilities
    "faker>=40.15.0",
    "rich>=13.9",
    "starlette>=1.0.0",
    "requests>=2.33.1",
    "allure-python-commons>=2.16.0",
]

[dependency-groups]
dev = [
    # Testing
    "pytest~=8.3",
    "pytest-asyncio~=0.25",
    "respx>=0.22",
    "allure-pytest>=2.16.0",
    # Lint / format
    "ruff>=0.11",
    "black>=25.1",
    # Typing
    "mypy>=1.15",
    # Git hooks
    "pre-commit>=4.6"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--alluredir=reports/allure-results/current --clean-alluredir"

[tool.mypy]
python_version = "3.12"
strict = true
